[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tntools"
version = "0.1.0"
description = "Tensor Network tools with a focus on combinatorial combinatorial optimization."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.19.0",
    "scipy>=1.5.0",
]